--- a/Home/addproperty.html
+++ b/Home/addproperty.html
@@ -370,7 +370,7 @@
         };
 
         // Replace '{{host}}/request/create' with your actual API endpoint
-        const apiUrl = 'https://real-estate-backend-9d9v.onrender.com';
+        const apiUrl = 'https://masar-company.onrender.com';
 
         fetch(`${apiUrl}/request/create`, {
           method: 'POST',
