--- a/Home/contactus.html
+++ b/Home/contactus.html
@@ -343,8 +343,8 @@
           message,
         };
 
-        // Replace 'https://real-estate-backend-9d9v.onrender.com' with your actual API endpoint
-        const apiUrl = 'https://real-estate-backend-9d9v.onrender.com';
+        // Replace 'https://masar-company.onrender.com' with your actual API endpoint
+        const apiUrl = 'https://masar-company.onrender.com';
 
         fetch(`${apiUrl}/contact/create`, {
           method: 'POST',
