--- a/Home/Home.html
+++ b/Home/Home.html
@@ -987,7 +987,7 @@
       });
 
       function fetchProperties(sectionId, endpoint, applySearchCriteria) {
-        const host = 'https://real-estate-backend-9d9v.onrender.com';
+        const host = 'https://masar-company.onrender.com';
 
         // Get selected options from the search form
         const propertyType = document
@@ -1080,7 +1080,7 @@
         const propertyList = document
           .getElementById(!isSearchEmpty ? 'searchResult' : sectionId)
           .querySelector('.property-list');
-        const host = 'https://real-estate-backend-9d9v.onrender.com';
+        const host = 'https://masar-company.onrender.com';
 
         // Function to generate a random ID
         function generateRandomId() {
