--- a/Home/Off-plan.html
+++ b/Home/Off-plan.html
@@ -1084,7 +1084,7 @@
 
       //Function to fetch properties for a specific section
       function fetchProperties(sectionId, city) {
-        const host = "https://masar-company.onrender.com";
+        const host = "https://masar-masar.vtbl7g.easypanel.host";
         fetch(
           `${host}/property/search?propertyFor=Off-plan&propertyPage=Off-plan`
         )
@@ -1103,7 +1103,7 @@
         const propertyList = document
           .getElementById(sectionId)
           .querySelector(".property-list");
-        const host = "https://masar-company.onrender.com";
+        const host = "https://masar-masar.vtbl7g.easypanel.host";
 
         // Function to generate a random ID
         function generateRandomId() {
