--- a/Home/sale.html
+++ b/Home/sale.html
@@ -1900,7 +1900,7 @@
 
       // Function to fetch properties for a specific section
       function fetchProperties(sectionId, city) {
-        const host = "https://masar-company.onrender.com";
+        const host = "https://masar-masar.vtbl7g.easypanel.host";
         fetch(`${host}/property/search?propertyFor=Sale&propertyPage=Sale`)
           .then((response) => response.json())
           .then((data) => {
@@ -1917,7 +1917,7 @@
         const propertyList = document
           .getElementById(sectionId)
           .querySelector(".property-list");
-        const host = "https://masar-company.onrender.com";
+        const host = "https://masar-masar.vtbl7g.easypanel.host";
 
         data.forEach((property) => {
           // Check if the property belongs to the current section
