--- a/Home/Home.html
+++ b/Home/Home.html
@@ -8,8 +8,8 @@
     ></script>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="stylesheet" href="main.css" />
-    <link rel="stylesheet" href="index.css" />
+    <link rel="stylesheet" href="css/main.css" />
+    <link rel="stylesheet" href="css/index.css" />
 
     <script src="https://unpkg.com/boxicons@2.1.4/dist/boxicons.js"></script>
     <!-- <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />  //library to animate elements on your page as you scroll.-->
@@ -79,7 +79,7 @@
     <link
       rel="icon"
       type="image/x-icon"
-      href="WhatsApp Image 2024-01-05 at 8.33.43 PM.jpeg"
+      href="img/WhatsApp Image 2024-01-05 at 8.33.43 PM.jpeg"
     />
     <style>
       :root {
@@ -128,12 +128,12 @@
         class="logo"
         style="display: inline-flex; align-items: center; gap: 5px"
       >
-        <img src="logo.jpeg" />
+        <img src="img/logo.jpeg" />
         <!-- <h1>Ma</h1> -->
       </div>
       <div class="navbar" id="navBar" style="background-color: #fff">
         <div class="close-menu-button" onclick="toggleMenu();">
-          <img src="x-regular-24.png" alt="close-menu" />
+          <img src="img/x-regular-24.png" alt="close-menu" />
         </div>
         <ul>
           <li class="active" style="background-color: #192f63">
@@ -149,7 +149,7 @@
         </ul>
       </div>
       <div class="menu-button" onclick="toggleMenu()">
-        <img src="menu-regular-24.png" alt="open-menu" />
+        <img src="img/menu-regular-24.png" alt="open-menu" />
       </div>
     </nav>
 
@@ -158,7 +158,7 @@
       <div class="background-detail">
         <img
           class="background-img"
-          src="aerial-view-city-by-water_23-2150893061.jpg"
+          src="img/aerial-view-city-by-water_23-2150893061.jpg"
           style="width: 100%"
         />
         <div class="centered">
@@ -175,7 +175,7 @@
           <div class="img-area">
             <div class="img">
               <img
-                src="WhatsApp Image 2024-01-05 at 8.33.43 PM.jpeg"
+                src="img/WhatsApp Image 2024-01-05 at 8.33.43 PM.jpeg"
                 style="width: 400px; height: 350px"
               />
             </div>
@@ -1147,7 +1147,7 @@
             <div class="card-footer">
               <div class="card-author">
                 <figure class="author-avatar">
-                  <img src="logo.jpeg" style="width: 60px;
+                  <img src="img/logo.jpeg" style="width: 60px;
                   height: 35px;" alt="${
                     property.createdBy.name
                   }" class="w-100" />
@@ -1203,7 +1203,7 @@
             <div class="location-card">
               <figure class="card-banner">
                 <img
-                  src="BURJ KHALIFA, world's tallest tower _ Tour & view from the top (Dubai).jpg"
+                  src="img/BURJ KHALIFA, world's tallest tower _ Tour & view from the top (Dubai).jpg"
                   alt="New Apartment Nice View"
                 />
               </figure>
@@ -1224,7 +1224,7 @@
             <div class="location-card">
               <figure class="card-banner">
                 <img
-                  src="BURJ KHALIFA, world's tallest tower _ Tour & view from the top (Dubai).jpg"
+                  src="img/BURJ KHALIFA, world's tallest tower _ Tour & view from the top (Dubai).jpg"
                   alt="New Apartment Nice View"
                 />
               </figure>
@@ -1246,7 +1246,7 @@
             <div class="location-card">
               <figure class="card-banner">
                 <img
-                  src="BURJ KHALIFA, world's tallest tower _ Tour & view from the top (Dubai).jpg"
+                  src="img/BURJ KHALIFA, world's tallest tower _ Tour & view from the top (Dubai).jpg"
                   alt="New Apartment Nice View"
                 />
               </figure>
@@ -1269,7 +1269,7 @@
             <div class="location-card">
               <figure class="card-banner">
                 <img
-                  src="BURJ KHALIFA, world's tallest tower _ Tour & view from the top (Dubai).jpg"
+                  src="img/BURJ KHALIFA, world's tallest tower _ Tour & view from the top (Dubai).jpg"
                   alt="New Apartment Nice View"
                 />
               </figure>
@@ -1290,7 +1290,7 @@
             <div class="location-card">
               <figure class="card-banner">
                 <img
-                  src="BURJ KHALIFA, world's tallest tower _ Tour & view from the top (Dubai).jpg"
+                  src="img/BURJ KHALIFA, world's tallest tower _ Tour & view from the top (Dubai).jpg"
                   alt="New Apartment Nice View"
                 />
               </figure>
@@ -1312,7 +1312,7 @@
             <div class="location-card">
               <figure class="card-banner">
                 <img
-                  src="BURJ KHALIFA, world's tallest tower _ Tour & view from the top (Dubai).jpg"
+                  src="img/BURJ KHALIFA, world's tallest tower _ Tour & view from the top (Dubai).jpg"
                   alt="New Apartment Nice View"
                 />
               </figure>
@@ -1333,7 +1333,7 @@
             <div class="location-card">
               <figure class="card-banner">
                 <img
-                  src="BURJ KHALIFA, world's tallest tower _ Tour & view from the top (Dubai).jpg"
+                  src="img/BURJ KHALIFA, world's tallest tower _ Tour & view from the top (Dubai).jpg"
                   alt="New Apartment Nice View"
                 />
               </figure>
@@ -1354,7 +1354,7 @@
             <div class="location-card">
               <figure class="card-banner">
                 <img
-                  src="BURJ KHALIFA, world's tallest tower _ Tour & view from the top (Dubai).jpg"
+                  src="img/BURJ KHALIFA, world's tallest tower _ Tour & view from the top (Dubai).jpg"
                   alt="New Apartment Nice View"
                 />
               </figure>
@@ -1375,7 +1375,7 @@
             <div class="location-card">
               <figure class="card-banner">
                 <img
-                  src="BURJ KHALIFA, world's tallest tower _ Tour & view from the top (Dubai).jpg"
+                  src="img/BURJ KHALIFA, world's tallest tower _ Tour & view from the top (Dubai).jpg"
                   alt="New Apartment Nice View"
                 />
               </figure>
@@ -1397,7 +1397,7 @@
             <div class="location-card">
               <figure class="card-banner">
                 <img
-                  src="BURJ KHALIFA, world's tallest tower _ Tour & view from the top (Dubai).jpg"
+                  src="img/BURJ KHALIFA, world's tallest tower _ Tour & view from the top (Dubai).jpg"
                   alt="New Apartment Nice View"
                 />
               </figure>
@@ -1419,7 +1419,7 @@
             <div class="location-card">
               <figure class="card-banner">
                 <img
-                  src="BURJ KHALIFA, world's tallest tower _ Tour & view from the top (Dubai).jpg"
+                  src="img/BURJ KHALIFA, world's tallest tower _ Tour & view from the top (Dubai).jpg"
                   alt="New Apartment Nice View"
                 />
               </figure>
@@ -1440,7 +1440,7 @@
             <div class="location-card">
               <figure class="card-banner">
                 <img
-                  src="BURJ KHALIFA, world's tallest tower _ Tour & view from the top (Dubai).jpg"
+                  src="img/BURJ KHALIFA, world's tallest tower _ Tour & view from the top (Dubai).jpg"
                   alt="New Apartment Nice View"
                 />
               </figure>
@@ -1463,7 +1463,7 @@
             <div class="location-card">
               <figure class="card-banner">
                 <img
-                  src="BURJ KHALIFA, world's tallest tower _ Tour & view from the top (Dubai).jpg"
+                  src="img/BURJ KHALIFA, world's tallest tower _ Tour & view from the top (Dubai).jpg"
                   alt="New Apartment Nice View"
                 />
               </figure>
@@ -1485,7 +1485,7 @@
             <div class="location-card">
               <figure class="card-banner">
                 <img
-                  src="BURJ KHALIFA, world's tallest tower _ Tour & view from the top (Dubai).jpg"
+                  src="img/BURJ KHALIFA, world's tallest tower _ Tour & view from the top (Dubai).jpg"
                   alt="New Apartment Nice View"
                 />
               </figure>
@@ -1507,7 +1507,7 @@
             <div class="location-card">
               <figure class="card-banner">
                 <img
-                  src="BURJ KHALIFA, world's tallest tower _ Tour & view from the top (Dubai).jpg"
+                  src="img/BURJ KHALIFA, world's tallest tower _ Tour & view from the top (Dubai).jpg"
                   alt="New Apartment Nice View"
                 />
               </figure>
@@ -1528,7 +1528,7 @@
             <div class="location-card">
               <figure class="card-banner">
                 <img
-                  src="BURJ KHALIFA, world's tallest tower _ Tour & view from the top (Dubai).jpg"
+                  src="img/BURJ KHALIFA, world's tallest tower _ Tour & view from the top (Dubai).jpg"
                   alt="New Apartment Nice View"
                 />
               </figure>
@@ -1550,7 +1550,7 @@
             <div class="location-card">
               <figure class="card-banner">
                 <img
-                  src="BURJ KHALIFA, world's tallest tower _ Tour & view from the top (Dubai).jpg"
+                  src="img/BURJ KHALIFA, world's tallest tower _ Tour & view from the top (Dubai).jpg"
                   alt="New Apartment Nice View"
                 />
               </figure>
@@ -1571,7 +1571,7 @@
             <div class="location-card">
               <figure class="card-banner">
                 <img
-                  src="BURJ KHALIFA, world's tallest tower _ Tour & view from the top (Dubai).jpg"
+                  src="img/BURJ KHALIFA, world's tallest tower _ Tour & view from the top (Dubai).jpg"
                   alt="New Apartment Nice View"
                 />
               </figure>
@@ -1608,7 +1608,7 @@
             <div class="location-card">
               <figure class="card-banner">
                 <img
-                  src="BURJ KHALIFA, world's tallest tower _ Tour & view from the top (Dubai).jpg"
+                  src="img/BURJ KHALIFA, world's tallest tower _ Tour & view from the top (Dubai).jpg"
                   alt="New Apartment Nice View"
                 />
               </figure>
@@ -1630,7 +1630,7 @@
             <div class="location-card">
               <figure class="card-banner">
                 <img
-                  src="BURJ KHALIFA, world's tallest tower _ Tour & view from the top (Dubai).jpg"
+                  src="img/BURJ KHALIFA, world's tallest tower _ Tour & view from the top (Dubai).jpg"
                   alt="New Apartment Nice View"
                 />
               </figure>
@@ -1652,7 +1652,7 @@
             <div class="location-card">
               <figure class="card-banner">
                 <img
-                  src="BURJ KHALIFA, world's tallest tower _ Tour & view from the top (Dubai).jpg"
+                  src="img/BURJ KHALIFA, world's tallest tower _ Tour & view from the top (Dubai).jpg"
                   alt="New Apartment Nice View"
                 />
               </figure>
@@ -1994,6 +1994,6 @@
       </script>
     </footer>
 
-    <script src="main.js"></script>
+    <script src="js/main.js"></script>
   </body>
 </html>
