--- a/Home/addproperty.html
+++ b/Home/addproperty.html
@@ -28,7 +28,7 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"
     />
-    <link rel="stylesheet" type="text/css" href="main.css" />
+    <link rel="stylesheet" type="text/css" href="css/main.css" />
     <title>Add Your Property</title>
     <link
       rel="stylesheet"
@@ -182,13 +182,13 @@
         style="display: inline-flex; align-items: center; gap: 5px"
       >
         <img
-        src="logo.jpeg"
+        src="img/logo.jpeg"
         />
         <!-- <h1>Ma</h1> -->
       </div>
       <div class="navbar" id="navBar" style="background-color:#fff;">
         <div class="close-menu-button" onclick="toggleMenu()">
-          <img src="x-regular-24.png" alt="close-menu" />
+          <img src="img/x-regular-24.png" alt="close-menu" />
         </div>
         <ul>
           <li>
@@ -202,7 +202,7 @@
         </ul>
       </div>
       <div class="menu-button" onclick="toggleMenu()">
-        <img src="menu-regular-24.png" alt="open-menu" />
+        <img src="img/menu-regular-24.png" alt="open-menu" />
       </div>
     </nav>
 
@@ -211,7 +211,7 @@
       <div class="background-detail">
         <img
           class="background-img"
-          src="7ad0550218f646f12b1405cdc835a1bc.jpg"
+          src="img/7ad0550218f646f12b1405cdc835a1bc.jpg"
           style="width: 100%"
         />
       </div>
@@ -449,7 +449,7 @@
             <p class="footer-list-title">MASAR</p>
 
             <!-- <a href="#" class="logo">
-      <img src="imgs/aa643105-4d9b-44fa-921f-8ffc75b6dfa2.jpg" alt="Homeverse logo" style="width: 200px;">
+      <img src="img/aa643105-4d9b-44fa-921f-8ffc75b6dfa2.jpg" alt="Homeverse logo" style="width: 200px;">
     </a> -->
 
             <p class="section-text">
@@ -708,6 +708,6 @@
         }
       </script>
     </footer>
-    <script src="main.js"></script>
+    <script src="js/main.js"></script>
   </body>
 </html>
