--- a/Home/contactus.html
+++ b/Home/contactus.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" type="text/css" href="main.css" />
+    <link rel="stylesheet" type="text/css" href="css/main.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script
       type="module"
@@ -176,13 +176,13 @@
         style="display: inline-flex; align-items: center; gap: 5px"
       >
         <img
-        src="logo.jpeg"
+        src="img/logo.jpeg"
         />
         <!-- <h1>Ma</h1> -->
       </div>
       <div class="navbar" id="navBar" style="background-color:#fff;">
         <div class="close-menu-button" onclick="toggleMenu()">
-          <img src="x-regular-24.png" alt="close-menu" />
+          <img src="img/x-regular-24.png" alt="close-menu" />
         </div>
         <ul>
           <li><a href="Home.html"><i class="fa fa-fw fa-home"></i> Home</a></li>
@@ -194,7 +194,7 @@
         </ul>
       </div>
       <div class="menu-button" onclick="toggleMenu()">
-        <img src="menu-regular-24.png" alt="open-menu" />
+        <img src="img/menu-regular-24.png" alt="open-menu" />
       </div>
     </nav>
 
@@ -203,7 +203,7 @@
       <div class="background-detail">
         <img
           class="background-img"
-          src="contact-register-feedback-support-help-concept_53876-124243.jpg"
+          src="img/contact-register-feedback-support-help-concept_53876-124243.jpg"
           style="width: 100%"
         />
       </div>
@@ -642,6 +642,6 @@
       </script>
     </footer>
 
-    <script src="main.js"></script>
+    <script src="js/main.js"></script>
   </body>
 </html>
