--- a/Home/property.html
+++ b/Home/property.html
@@ -21,7 +21,7 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"
     />
-    <link rel="stylesheet" type="text/css" href="main.css" />
+    <link rel="stylesheet" type="text/css" href="css/main.css" />
     <title>View</title>
     <link
       rel="stylesheet"
@@ -473,13 +473,13 @@
         style="display: inline-flex; align-items: center; gap: 5px"
       >
         <img
-        src="logo.jpeg"
+        src="img/logo.jpeg"
         />
         <!-- <h1>Ma</h1> -->
       </div>
       <div class="navbar" id="navBar">
         <div class="close-menu-button" onclick="toggleMenu()">
-          <img src="x-regular-24.png" alt="close-menu" />
+          <img src="img/x-regular-24.png" alt="close-menu" />
         </div>
         <ul>
           <li>
@@ -495,7 +495,7 @@
         </ul>
       </div>
       <div class="menu-button" onclick="toggleMenu()">
-        <img src="menu-regular-24.png" alt="open-menu" />
+        <img src="img/menu-regular-24.png" alt="open-menu" />
       </div>
     </nav>
 
@@ -574,7 +574,7 @@
               <div class="card-footer">
                 <div class="card-author">
                   <figure class="author-avatar">
-                    <img src="logo.jpeg" style="width: 60px;
+                    <img src="img/logo.jpeg" style="width: 60px;
                     height: 35px;" alt="${
                       property.createdBy.name
                     }" class="w-100" />
@@ -634,7 +634,7 @@
             <p class="footer-list-title">MASAR</p>
 
             <!-- <a href="#" class="logo">
-        <img src="imgs/aa643105-4d9b-44fa-921f-8ffc75b6dfa2.jpg" alt="Homeverse logo" style="width: 200px;">
+        <img src="img/aa643105-4d9b-44fa-921f-8ffc75b6dfa2.jpg" alt="Homeverse logo" style="width: 200px;">
       </a> -->
 
             <p class="section-text">
@@ -945,7 +945,7 @@
         }
       </script>
     </footer>
-    <script src="main.js"></script>
+    <script src="js/main.js"></script>
   </body>
 </html>
 
