--- a/Home/index.html
+++ b/Home/index.html
@@ -137,7 +137,7 @@
         </div>
         <ul>
           <li class="active" style="background-color: #192f63">
-            <a href="Home.html" style="color: #fff"
+            <a href="index.html" style="color: #fff"
               ><i class="fa fa-fw fa-home"></i> Home</a
             >
           </li>
@@ -1860,7 +1860,7 @@
               </li>
 
               <li>
-                <a href="Home.html#ex" class="footer-link">Abu Dhabi Areas</a>
+                <a href="index.html#ex" class="footer-link">Abu Dhabi Areas</a>
               </li>
 
               <li>
