--- a/Home/property.html
+++ b/Home/property.html
@@ -483,7 +483,7 @@
         </div>
         <ul>
           <li>
-            <a href="Home.html"><i class="fa fa-fw fa-home"></i> Home</a>
+            <a href="index.html"><i class="fa fa-fw fa-home"></i> Home</a>
           </li>
           <li><a href="rent.html">Rent</a></li>
           <li><a href="sale.html">Sale</a></li>
@@ -812,7 +812,7 @@
               </li>
 
               <li>
-                <a href="Home.html#ex" class="footer-link">Abu Dhabi Areas</a>
+                <a href="index.html#ex" class="footer-link">Abu Dhabi Areas</a>
               </li>
 
               <li>
