--- a/Home/contactus.html
+++ b/Home/contactus.html
@@ -185,7 +185,7 @@
           <img src="img/x-regular-24.png" alt="close-menu" />
         </div>
         <ul>
-          <li><a href="Home.html"><i class="fa fa-fw fa-home"></i> Home</a></li>
+          <li><a href="index.html"><i class="fa fa-fw fa-home"></i> Home</a></li>
           <li><a href="rent.html">Rent</a></li>
           <li><a href="sale.html">Sale</a></li>
           <li><a href="Off-plan.html">Off Plan</a></li>
@@ -506,7 +506,7 @@
               </li>
 
               <li>
-                <a href="Home.html#ex" class="footer-link">Abu Dhabi Areas</a>
+                <a href="index.html#ex" class="footer-link">Abu Dhabi Areas</a>
               </li>
 
               <li>
