--- a/Home/rent.html
+++ b/Home/rent.html
@@ -582,7 +582,7 @@
         </div>
         <ul>
           <li>
-            <a href="Home.html"><i class="fa fa-fw fa-home"></i> Home</a>
+            <a href="index.html"><i class="fa fa-fw fa-home"></i> Home</a>
           </li>
           <li class="active">
             <a href="rent.html" style="color: #fff">Rent</a>
@@ -2205,7 +2205,7 @@
               </li>
 
               <li>
-                <a href="Home.html#ex" class="footer-link">Abu Dhabi Areas</a>
+                <a href="index.html#ex" class="footer-link">Abu Dhabi Areas</a>
               </li>
 
               <li>
