--- a/Home/contactus.html
+++ b/Home/contactus.html
@@ -343,8 +343,8 @@
           message,
         };
 
-        // Replace 'https://masar-masar.vtbl7g.easypanel.host' with your actual API endpoint
-        const apiUrl = 'https://masar-masar.vtbl7g.easypanel.host';
+        // Replace 'https://masarbackend-masar-backend.vfbty0.easypanel.host' with your actual API endpoint
+        const apiUrl = 'https://masarbackend-masar-backend.vfbty0.easypanel.host';
 
         fetch(`${apiUrl}/contact/create`, {
           method: 'POST',
