--- a/Home/property.html
+++ b/Home/property.html
@@ -510,7 +510,7 @@
           // Extract property ID from the URL
           const urlParams = new URLSearchParams(window.location.search);
           const propertyId = urlParams.get('id');
-          const host = 'https://masar-masar.vtbl7g.easypanel.host';
+          const host = 'https://masarbackend-masar-backend.vfbty0.easypanel.host';
 
           // Make API request to fetch property details
           const response = await fetch(`${host}/property/view/${propertyId}`);
