--- a/Home/rent.html
+++ b/Home/rent.html
@@ -1894,7 +1894,7 @@
 
       // Function to fetch properties for a specific section
       function fetchProperties(sectionId, city) {
-        const host = "https://masar-masar.vtbl7g.easypanel.host";
+        const host = "https://masarbackend-masar-backend.vfbty0.easypanel.host";
         fetch(`${host}/property/search?propertyFor=Rent&propertyPage=Rent`)
           .then((response) => response.json())
           .then((data) => {
@@ -1911,7 +1911,7 @@
         const propertyList = document
           .getElementById(sectionId)
           .querySelector(".property-list");
-        const host = "https://masar-masar.vtbl7g.easypanel.host";
+        const host = "https://masarbackend-masar-backend.vfbty0.easypanel.host";
 
         // Function to generate a random ID
         function generateRandomId() {
