--- a/Home/property.html
+++ b/Home/property.html
@@ -521,9 +521,9 @@
             document.getElementById('propertyDetails');
           if (data.property) {
             const property = data.property;
-            const websiteUrl = 'http://127.0.0.1:5500/property.html?id=';
+            const websiteUrl = 'http://masarfrontend-masar.vfbty0.easypanel.host/property.html?id=';
             const websiteurlDetails =
-              'http://127.0.0.1:5500/details.html?id=';
+              'http://masarfrontend-masar.vfbty0.easypanel.host/details.html?id=';
             propertyDetailsContainer.innerHTML = `
       <div class="property-card">
               <figure class="card-banner">
