--- a/Home/rent.html
+++ b/Home/rent.html
@@ -1923,7 +1923,7 @@
           if (property.propertySection === sectionId) {
             const listItem = document.createElement("li");
             listItem.classList.add("swiper-slide"); // Add swiper-slide class to the li element
-            const websiteUrl = "http://127.0.0.1:5500/property.html?id=";
+            const websiteUrl = "http://masarfrontend-masar.vfbty0.easypanel.host/property.html?id=";
             const websiteurlDetails = "details.html?id=";
             listItem.innerHTML = `
         <div class="property-card">
