--- a/Home/details.html
+++ b/Home/details.html
@@ -555,7 +555,7 @@
             document.getElementById("propertyDetails");
           if (data.property) {
             const property = data.property;
-            const websiteUrl = "http://127.0.0.1:5500/property.html?id=";
+            const websiteUrl = "http://masarfrontend-masar.vfbty0.easypanel.host/property.html?id=";
             propertyDetailsContainer.innerHTML = `
       <div class="property-card">
               <figure class="card-banner">
