--- a/Home/property.html
+++ b/Home/property.html
@@ -30,7 +30,11 @@
       crossorigin="anonymous"
     />
 
-    
+    <link
+    rel="icon"
+    type="image/x-icon"
+    href="img/WhatsApp Image 2024-01-05 at 8.33.43 PM.jpeg"
+  />
     <style>
       *,
       *::before,
