--- a/Home/addproperty.html
+++ b/Home/addproperty.html
@@ -28,6 +28,12 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"
     />
+
+    <link
+    rel="icon"
+    type="image/x-icon"
+    href="img/WhatsApp Image 2024-01-05 at 8.33.43 PM.jpeg"
+  />
     <link rel="stylesheet" type="text/css" href="css/main.css" />
     <title>Add Your Property</title>
     <link
