--- a/Home/index.html
+++ b/Home/index.html
@@ -99,6 +99,9 @@
         margin: 0 35px;
         overflow: hidden;
       }
+      .w-100 {
+        width: 100%;
+      }
       .swiper-navBtn {
         color: #fff;
         height: 40px;
