--- a/Home/contactus.html
+++ b/Home/contactus.html
@@ -400,7 +400,7 @@
                 <a href="#" class="contact-link">
                   <ion-icon name="location-outline"></ion-icon>
 
-                  <address>Brooklyn, New York, United States</address>
+                  <address>Musaffah - M2 - Building 33 First Floor - Office 107</address>
                 </a>
               </li>
 
@@ -416,7 +416,7 @@
                 <a href="#" class="contact-link">
                   <ion-icon name="mail-outline"></ion-icon>
 
-                  <span>contact@Masar.com</span>
+                  <span>Info@Masare.ae</span>
                 </a>
               </li>
             </ul>
