--- a/Home/Off-plan.html
+++ b/Home/Off-plan.html
@@ -1120,7 +1120,7 @@
           if (property.propertySection === sectionId) {
             const listItem = document.createElement("li");
             listItem.classList.add("swiper-slide"); // Add swiper-slide class to the li element
-            const websiteUrl = "http://masarfrontend-masar.vfbty0.easypanel.host/property.html?id=";
+            const websiteUrl = "http://masarfrontend-masar.vfbty0.easypanel.host/details.html?id=";
             const websiteurlDetails =
               "details.html?id=";
             listItem.innerHTML = `
@@ -1240,7 +1240,7 @@
                 <a href="#" class="contact-link">
                   <ion-icon name="location-outline"></ion-icon>
 
-                  <address>Brooklyn, New York, United States</address>
+                  <address>Musaffah - M2 - Building 33 First Floor - Office 107</address>
                 </a>
               </li>
 
@@ -1256,7 +1256,7 @@
                 <a href="#" class="contact-link">
                   <ion-icon name="mail-outline"></ion-icon>
 
-                  <span>contact@Masar.com</span>
+                  <span>Info@Masare.ae</span>
                 </a>
               </li>
             </ul>
