--- a/Home/details.html
+++ b/Home/details.html
@@ -561,7 +561,7 @@
             document.getElementById("propertyDetails");
           if (data.property) {
             const property = data.property;
-            const websiteUrl = "http://masarfrontend-masar.vfbty0.easypanel.host/property.html?id=";
+            const websiteUrl = "http://masarfrontend-masar.vfbty0.easypanel.host/details.html?id=";
             propertyDetailsContainer.innerHTML = `
       <div class="property-card">
               <figure class="card-banner">
@@ -693,7 +693,7 @@
                 <a href="#" class="contact-link">
                   <ion-icon name="location-outline"></ion-icon>
 
-                  <address>Brooklyn, New York, United States</address>
+                  <address>Musaffah - M2 - Building 33 First Floor - Office 107</address>
                 </a>
               </li>
 
@@ -709,7 +709,7 @@
                 <a href="#" class="contact-link">
                   <ion-icon name="mail-outline"></ion-icon>
 
-                  <span>contact@Masar.com</span>
+                  <span>Info@Masare.ae</span>
                 </a>
               </li>
             </ul>
