--- a/Home/index.html
+++ b/Home/index.html
@@ -1096,7 +1096,7 @@
 
           const listItem = document.createElement('li');
           listItem.classList.add('swiper-slide'); // Add swiper-slide class to the li element
-          const websiteUrl = 'http://masarfrontend-masar.vfbty0.easypanel.host/property.html?id=';
+          const websiteUrl = 'http://masarfrontend-masar.vfbty0.easypanel.host/details.html?id=';
           const websiteurlDetails = 'details.html?id=';
           listItem.innerHTML = `
         <div class="property-card">
@@ -1699,7 +1699,7 @@
                 <a href="#" class="contact-link">
                   <ion-icon name="location-outline"></ion-icon>
 
-                  <address>Brooklyn, New York, United States</address>
+                  <address>Musaffah - M2 - Building 33 First Floor - Office 107</address>
                 </a>
               </li>
 
@@ -1715,7 +1715,7 @@
                 <a href="#" class="contact-link">
                   <ion-icon name="mail-outline"></ion-icon>
 
-                  <span>contact@Masar.com</span>
+                  <span>Info@Masare.ae</span>
                 </a>
               </li>
             </ul>
