--- a/Home/property.html
+++ b/Home/property.html
@@ -525,7 +525,7 @@
             document.getElementById('propertyDetails');
           if (data.property) {
             const property = data.property;
-            const websiteUrl = 'http://masarfrontend-masar.vfbty0.easypanel.host/property.html?id=';
+            const websiteUrl = 'http://masarfrontend-masar.vfbty0.easypanel.host/details.html?id=';
             const websiteurlDetails =
               'http://masarfrontend-masar.vfbty0.easypanel.host/details.html?id=';
             propertyDetailsContainer.innerHTML = `
@@ -652,7 +652,7 @@
                 <a href="#" class="contact-link">
                   <ion-icon name="location-outline"></ion-icon>
 
-                  <address>Brooklyn, New York, United States</address>
+                  <address>Musaffah - M2 - Building 33 First Floor - Office 107</address>
                 </a>
               </li>
 
@@ -668,7 +668,7 @@
                 <a href="#" class="contact-link">
                   <ion-icon name="mail-outline"></ion-icon>
 
-                  <span>contact@Masar.com</span>
+                  <span>Info@Masare.ae</span>
                 </a>
               </li>
             </ul>
