--- a/Home/index.html
+++ b/Home/index.html
@@ -8,6 +8,8 @@
     ></script>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="description" content="Find your dream home with Real Estate.Find your dream home with Masar . Browse through our listings of houses, apartments, and villa for sale or rent.">
+    <meta name="keywords" content="real estate, homes for sale, homes for rent, apartments, masar company">
     <link rel="stylesheet" href="css/main.css" />
     <link rel="stylesheet" href="css/index.css" />
 
