--- a/Home/addproperty.html
+++ b/Home/addproperty.html
@@ -1,8 +1,11 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Find your dream home with Real Estate.Find your dream home with Masar . Browse through our listings of houses, apartments, and villa for sale or rent.">
+    <meta name="keywords" content="real estate, homes for sale, homes for rent, apartments, masar company">
+    
     <script
       type="module"
       src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"
