--- a/Home/contactus.html
+++ b/Home/contactus.html
@@ -3,6 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Find your dream home with Real Estate.Find your dream home with Masar . Browse through our listings of houses, apartments, and villa for sale or rent.">
+    <meta name="keywords" content="real estate, homes for sale, homes for rent, apartments, masar company">
+    
     <link rel="stylesheet" type="text/css" href="css/main.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script
