--- a/Home/addproperty.html
+++ b/Home/addproperty.html
@@ -426,6 +426,7 @@
         'Staff Accommodation',
         'Comp',
         'Ware House',
+        'Pent house',
       ];
       const serviceOptions = ['Rent', 'Sale', 'Invest', 'Manage', 'Evaluate'];
 
