--- a/Home/index.html
+++ b/Home/index.html
@@ -355,6 +355,8 @@
               'Staff Accommodation',
               'Ware House',
               'Comp',
+              'Pent house',
+              'Residential Land'
             ];
 
             function addCountry1(selectedCountry1) {
@@ -664,6 +666,8 @@
               'Staff Accommodation',
               'Ware House',
               'Comp',
+              'Pent house',
+              'Residential Land'
             ];
             showSearchContainer('search-button1', ...countries1);
             // Remove "active" class from all buttons with the class "btnsea"
@@ -698,6 +702,8 @@
               'Staff Accommodation',
               'Ware House',
               'Comp',
+              'Pent house',
+              'Residential Land'
             ];
             showSearchContainer('search-button-rent', ...countries1);
             // Remove "active" class from all buttons with the class "btnsea"
@@ -732,6 +738,8 @@
               'Staff Accommodation',
               'Ware House',
               'Comp',
+              'Pent house',
+              'Residential Land'
             ];
             showSearchContainer('search-button-sale', ...countries1);
             // Remove "active" class from all buttons with the class "btnsea"
@@ -1997,6 +2005,8 @@
           return phoneRegex.test(phone);
         }
       </script>
+
+      <p style="display: flex;justify-content: center;">&copy; 2024 Masar. All rights reserved.</p>
     </footer>
 
     <script src="js/main.js"></script>
