--- a/Home/addproperty.html
+++ b/Home/addproperty.html
@@ -171,7 +171,7 @@
 
       @media (max-width: 400px) {
         .form {
-          padding-left: 10px !important;
+          padding: 10px !important;
         }
         h1{
           font-size:x-large;
