--- a/Home/index.html
+++ b/Home/index.html
@@ -337,7 +337,7 @@
               'Off-plan',
               'Commercial Land',
               'Industrial Land',
-              'Villa',
+              'Residential Villa',
               'Farm',
               'Commercial Villa',
               'Town House',
@@ -648,7 +648,7 @@
               'Off-plan',
               'Commercial Land',
               'Industrial Land',
-              'Villa',
+              'Residential Villa',
               'Farm',
               'Commercial Villa',
               'Town House',
@@ -684,7 +684,7 @@
             countries1 = [
               'Commercial Land',
               'Industrial Land',
-              'Villa',
+              'Residential Villa',
               'Farm',
               'Commercial Villa',
               'Town House',
@@ -720,7 +720,7 @@
             countries1 = [
               'Commercial Land',
               'Industrial Land',
-              'Villa',
+              'Residential Villa',
               'Farm',
               'Commercial Villa',
               'Town House',
