--- a/Home/addproperty.html
+++ b/Home/addproperty.html
@@ -382,7 +382,7 @@
         };
 
         // Replace '{{host}}/request/create' with your actual API endpoint
-        const apiUrl = 'https://masarbackend-masar-backend.vfbty0.easypanel.host';
+        const apiUrl = 'https://test-masar.onrender.com';
 
         fetch(`${apiUrl}/request/create`, {
           method: 'POST',
