--- a/Home/contactus.html
+++ b/Home/contactus.html
@@ -352,8 +352,8 @@
           message,
         };
 
-        // Replace 'https://masarbackend-masar-backend.vfbty0.easypanel.host' with your actual API endpoint
-        const apiUrl = 'https://masarbackend-masar-backend.vfbty0.easypanel.host';
+        // Replace 'https://test-masar.onrender.com' with your actual API endpoint
+        const apiUrl = 'https://test-masar.onrender.com';
 
         fetch(`${apiUrl}/contact/create`, {
           method: 'POST',
