--- a/Home/index.html
+++ b/Home/index.html
@@ -1000,7 +1000,7 @@
       });
 
       function fetchProperties(sectionId, endpoint, applySearchCriteria) {
-        const host = 'https://test-masar.onrender.com';
+        const host = 'https://masarbackend-masar-backend.vfbty0.easypanel.host';
 
         // Get selected options from the search form
         const propertyType = document
@@ -1093,7 +1093,7 @@
         const propertyList = document
           .getElementById(!isSearchEmpty ? 'searchResult' : sectionId)
           .querySelector('.property-list');
-        const host = 'https://test-masar.onrender.com';
+        const host = 'https://masarbackend-masar-backend.vfbty0.easypanel.host';
 
         // Function to generate a random ID
         function generateRandomId() {
