--- a/Home/property.html
+++ b/Home/property.html
@@ -517,7 +517,7 @@
           // Extract property ID from the URL
           const urlParams = new URLSearchParams(window.location.search);
           const propertyId = urlParams.get('id');
-          const host = 'https://test-masar.onrender.com';
+          const host = 'https://masarbackend-masar-backend.vfbty0.easypanel.hostend.vfbty0.easypanel.host';
 
           // Make API request to fetch property details
           const response = await fetch(`${host}/property/view/${propertyId}`);
