--- a/Home/rent.html
+++ b/Home/rent.html
@@ -1903,7 +1903,7 @@
 
       // Function to fetch properties for a specific section
       function fetchProperties(sectionId, city) {
-        const host = "https://test-masar.onrender.com";
+        const host = "https://masarbackend-masar-backend.vfbty0.easypanel.host";
         fetch(`${host}/property/search?propertyFor=Rent&propertyPage=Rent`)
           .then((response) => response.json())
           .then((data) => {
@@ -1920,7 +1920,7 @@
         const propertyList = document
           .getElementById(sectionId)
           .querySelector(".property-list");
-        const host = "https://test-masar.onrender.com";
+        const host = "https://masarbackend-masar-backend.vfbty0.easypanel.host";
 
         // Function to generate a random ID
         function generateRandomId() {
