--- a/Home/sale.html
+++ b/Home/sale.html
@@ -1910,7 +1910,7 @@
 
       // Function to fetch properties for a specific section
       function fetchProperties(sectionId, city) {
-        const host = "https://test-masar.onrender.com";
+        const host = "https://masarbackend-masar-backend.vfbty0.easypanel.host";
         fetch(`${host}/property/search?propertyFor=Sale&propertyPage=Sale`)
           .then((response) => response.json())
           .then((data) => {
@@ -1927,7 +1927,7 @@
         const propertyList = document
           .getElementById(sectionId)
           .querySelector(".property-list");
-        const host = "https://test-masar.onrender.com";
+        const host = "https://masarbackend-masar-backend.vfbty0.easypanel.host";
 
         data.forEach((property) => {
           // Check if the property belongs to the current section
