--- a/Home/Off-plan.html
+++ b/Home/Off-plan.html
@@ -1092,7 +1092,7 @@
 
       //Function to fetch properties for a specific section
       function fetchProperties(sectionId, city) {
-        const host = "https://test-masar.onrender.com";
+        const host = "https://masarbackend-masar-backend.vfbty0.easypanel.host";
         fetch(
           `${host}/property/search?propertyFor=Off-plan&propertyPage=Off-plan`
         )
@@ -1111,7 +1111,7 @@
         const propertyList = document
           .getElementById(sectionId)
           .querySelector(".property-list");
-        const host = "https://test-masar.onrender.com";
+        const host = "https://masarbackend-masar-backend.vfbty0.easypanel.host";
 
         // Function to generate a random ID
         function generateRandomId() {
