--- a/Home/index.html
+++ b/Home/index.html
@@ -865,24 +865,25 @@
       </div>
     </section>
 
+
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
 
     <script>
-      var swiper = new Swiper('.slide-container', {
+      var swiper = new Swiper(".slide-container", {
         slidesPerView: 3,
         spaceBetween: 15,
         sliderPerGroup: 3,
-        centerSlide: 'true',
-        fade: 'true',
-        grabCursor: 'true',
+        centerSlide: "true",
+        fade: "true",
+        grabCursor: "true",
         pagination: {
-          el: '.swiper-pagination',
+          el: ".swiper-pagination",
           clickable: true,
           dynamicBullets: true,
         },
         navigation: {
-          nextEl: '.swiper-button-next',
-          prevEl: '.swiper-button-prev',
+          nextEl: ".swiper-button-next",
+          prevEl: ".swiper-button-prev",
         },
 
         breakpoints: {
