--- a/Home/Off-plan.html
+++ b/Home/Off-plan.html
@@ -1209,15 +1209,16 @@
           }
         });
 
-        // Initialize swiper for this section
-        var swiper = new Swiper(`#${sectionId} .mySwiper`, {
+        // Initialize swiper
+
+        var swiper = new Swiper('.mySwiper', {
           grabCursor: true,
           pagination: {
-            el: `#${sectionId} .swiper-pagination`,
+            el: '.swiper-pagination',
           },
           navigation: {
-            nextEl: `#${sectionId} .swiper-button-next`,
-            prevEl: `#${sectionId} .swiper-button-prev`,
+            nextEl: '.swiper-button-next',
+            prevEl: '.swiper-button-prev',
           },
         });
       }
